# employee-attrition-ml

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/raw/: credit_card_applications.csv
examples/: sample_request.json
notebooks/: 01_quick_eda.ipynb
src/cc_approval/: __init__.py  app.py  cli.py  config.py  data_prep.py  examples.py  features.py  predict.py  schemas.py  train.py  utils.py
src/cc_approval/static/: swagger_ui_custom.html
tests/: test_predict.py  test_training.py
